fixed navigation bar problem with background image first behind and now below navbar

--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -5,7 +5,7 @@
         justify-content: space-between;
         background-color: var(--grey);
         width: 100%;
-        position: fixed;
+        position: sticky;
         height:16vh;
     }
 
