--- a/src/pages/logIn/LogIn.module.css
+++ b/src/pages/logIn/LogIn.module.css
@@ -1,16 +1,21 @@
 @media screen and (min-width: 576px) {
 
 .page-body {
-        background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.6)), url("../../assets/images/Achtergrond login en registreer.png");
-        background-size: cover;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-        background-position: center;
-        overflow-y: scroll;
-        width:100%;
-        height:100vh;
-        border-top:100px;
+                background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.6)), url("../../assets/images/Achtergrond login en registreer.png");
+                background-size: cover;
+                /*background-attachment: fixed;*/
+                background-repeat: no-repeat;
+                background-position: bottom;
+                /*overflow: hidden;*/
+                width: 100vw;
+                min-height: 100vh;
+                /*border-top:100px;*/
+        }
+.combine-nav-page{
+       display: flex;
+       flex-direction: column;
 }
+
 
 .form-login {
         display: flex;
