--- a/src/pages/registrerUser/RegistrerUser.module.css
+++ b/src/pages/registrerUser/RegistrerUser.module.css
@@ -3,16 +3,19 @@
 .page-body {
         background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.6)), url("../../assets/images/Achtergrond login en registreer.png");
         background-size: cover;
-        background-attachment: fixed;
+        /*background-attachment: fixed;*/
         background-repeat: no-repeat;
         background-position: bottom;
         /*!*overflow-y: scroll;*!*/
         /*overflow: hidden;*/
         width: 100vw;
-        max-height: 120vh;
+        min-height: 100vh;
         /*border-top:100px;*/
 }
-
+.combine-nav-page{
+        display: flex;
+        flex-direction: column;
+}
 
 
 
